# nbody-sim-parallel

./: CMakeLists.txt  imgui.ini
src/: CMakeLists.txt  bh_sim_utils.c  bh_sim_utils.h  main.cpp
vendors/: CMakeLists.txt
vendors/SDL/: CMakeLists.txt
vendors/imgui/: CMakeLists.txt
